
  o FEATURE: Add ligand fragment flipping [JED]

  o FEATURE: SMILES drag and drop added to LBG

  o FEATURE: Use pyrogen by default if mogul available [JED]

  o CHANGE:  EDS Resolution addeded to PDB Validation dialog [Frank von Delft]

  o BUG-FIX: Improvement in PDB->SHELXL ins output [Andrea Thorn]

  o BUG-FIX: Fix problem of deleting all atoms in Baton Build atoms
             molecule

  o BUG-FIX: Fix output format of external restraints [Richard Bunker]

  o BUG-FIX: Torsion-based ligand fitting improvements [Rob Nicholls]

  o BUG-FIX: Fix occassional graph data range anomaly [Rob Nicholls]

  o BUG-FIX: Add missing plane distortions in print_residue_distortions()

  o BUG-FIX: PISA interface works with newer version of pisa 
             [Maria José Sanchez Barrena]


-----

  Release 0.8.1

  o CHANGE: Generic Dislay Objects dialog improved.

  o CHANGE: Water validation dialogs are now transient

  o CHANGE: Ctrl-R for Rock View

  o CHANGE: Least Squares Fit dialog now remembers its values

  o BUG-FIX: stippling for line and text geometry and environment
    distances updated

  o BUG-FIX: Jiggle fit moves atoms with zero occupancies.

  o BUG-FIX: Problem with CA-Zone -> Mainchain fixed.

  o BUG-FIX: The amount that the other atoms ove with moving the
    picked atom has been reduced (but is configurable)

  o BUG-FIX: Sort chains and residues has been fixed.

  o BUG-FIX: Add Template Keybindings for Python now works

-----

  Release 0.8

  o FEATURE: Added a interface for Cootilus

  o FEATURE: Pubchem support for drag and drop

  o FEATURE: Added glyo and ProSMART modules

  o FEATURE: Auto-open MTZ files with x.F_phi.F & x.F_phi.phi for any
    value of x.

  o FEATURE: When input map seems to be from EM, ignore modal density
    values for statistics calculation

  o FEATURE: labels and on-screen text can now be rendered with stroke
    characters instead of bitmaps 
    (set-use-stroke-characters 1)
    set_use_stroke_characters(1)
