@@ -5530,19 +5530,38 @@ void copy_from_ncs_master_to_others(int imol, const char *chain_id) {
 
 
 
-void copy_residue_range_from_ncs_master_to_others(int imol, 
-			const char *master_chain_id,
-			int res_range_start,
-			int res_range_end) {
-
+void
+copy_residue_range_from_ncs_master_to_others(int imol, 
+					     const char *master_chain_id,
+					     int res_range_start,
+					     int res_range_end) {
+   
    if (!is_valid_model_molecule(imol)) {
       std::cout << " molecule " << imol << " is not a valid model molecule"
 		<< std::endl;
-   } else { 
-      std::string c(master_chain_id);
-      graphics_info_t::molecules[imol].copy_residue_range_from_ncs_master_to_others(c,
-										    res_range_start,
-										    res_range_end);
+   } else {
+
+
+      GtkWidget *ncs_dialog = 0; // we should store/look this up somehow
+                                 // (using graphics_info_t::ncs_control_dialog, say)
+
+      int ich = -1;
+      std::vector<std::string> chain_ids =
+	 coot::util::chains_in_molecule(graphics_info_t::molecules[imol].atom_sel.mol);
+      for (unsigned int ii=0; ii<chain_ids.size(); ii++) { 
+	 if (chain_ids[ii] == master_chain_id) {
+	    ich = ii;
+	    break;
+	 } 
+      }
+
+      if (ich != -1) {
+	 ncs_control_change_ncs_master_to_chain_update_widget(ncs_dialog, imol, ich);
+	 std::string mc(master_chain_id);
+	 graphics_info_t::molecules[imol].copy_residue_range_from_ncs_master_to_others(mc,
+										       res_range_start,
+										       res_range_end);
+      }
       graphics_draw();
    }
 }
